--- a/Makefile_cuda
+++ b/Makefile_cuda
@@ -1,5 +1,5 @@
 ##########################################################
-#UDA Makefile                                       #
+# CUDA Makefile                                       #
 #                                                            #
 # Author      : Ting Yu: tingyu1@illinois.edu           #
 # # Version     : 1.0                                          #
@@ -7,18 +7,21 @@
 # # Discription : generic Makefile for making CUDA programs    #
 # ##############################################################
 #
-BIN               := mv 
-CXXFLAGS          := -O3 -g
+BIN               := pg 
+CXXFLAGS          :=-Wall -Wextra -pipe -O2 -msse4.2 -msse3 -mfpmath=sse -march=native
+#-O3 -g
 CXX 		  :=g++
 
-CUDA_INSTALL_PATH ?= /usr/local/cuda
-CUDA_SDK_PATH ?= ~/NVIDIA_GPU_Computing_SDK
+CUDA_INSTALL_PATH = /usr/local/cuda
+CUDA_SDK_PATH = /home/ac/tingyu1/NVIDIA_GPU_Computing_SDK
 
 LIBSUFFIX  :=_x86_64
 
 NVCC ?= $(CUDA_INSTALL_PATH)/bin/nvcc
-INCD = -I$(CUDA_SDK_PATH)/C/common/inc -I$(CUDA_INSTALL_PATH)/include -I./
-LIBS = -L/usr/local/libcuda -lcuda -L$(CUDA_INSTALL_PATH)/lib64 -lcudart -lcublas -lcufft -L$(CUDA_SDK_PATH)/C/common/lib $(CUDA_SDK_PATH)/C/lib/libcutil$(LIBSUFFIX).a -lstdc++ -lpthread
+INCD = -I$(CUDA_SDK_PATH)/C/common/inc -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_PATH)/shared/inc 
+
+LIBS = -L/usr/local/libcuda -lcuda -L$(CUDA_INSTALL_PATH)/lib64 -lcudart -lcublas -lcufft -L$(CUDA_SDK_PATH)/C/common/lib/linux -lcutil_x86_64 -L$(CUDA_SDK_PATH)/shared/lib/linux -L$(CUDA_SDK_PATH)/C/lib -lstdc++ -lpthread
+
 CUDA_SDK?=3
 COMMONFLAGS = -DCUDA_SDK=$(CUDA_SDK)
 NVCCFLAGS := --ptxas-options=-v -O3 -G -g 
@@ -26,8 +29,10 @@ NVCCFLAGS := --ptxas-options=-v -O3 -G -g
 
 # files
 CPP_SOURCES       := util.cpp point.cpp node.cpp net.cpp parser.cpp\
-		     vec.cpp main.cpp triplet.cpp algebra.cpp block.cpp
-CU_SOURCES        := circuit.cu
+		     vec.cpp main.cpp triplet.cpp algebra.cpp \
+		     block.cpp circuit.cpp
+
+CU_SOURCES        := #circuit_host.cu circuit_kernel.cu
 HEADERS           := $(wildcard *.h)
 CPP_OBJS          := $(patsubst %.cpp, %.o, $(CPP_SOURCES))
 CU_OBJS           := $(patsubst %.cu, %.cu_o, $(CU_SOURCES))
@@ -57,13 +62,13 @@ PACKAGE_LIB =$(UMFPACK_LIB) $(CHOLMOD_LIB)
 PACKAGE_INC = -I$(UMFPACK_INC_DIR) -I$(CHOLMOD_INC_DIR)\
 
 %.cu_o : %.cu
-	$(NVCC) $(NVCCFLAGS) -c $(INCD)$(PACKAGE_INC) -o $@ $<
+	$(NVCC) $(NVCCFLAGS) -c $(INCD) -I$(UMFPACK_INC_DIR) -I$(CHOLMOD_INC_DIR) -o $@ $<
 
-%.o: %.cpp
-	$(CXX) -c $(CXXFLAGS) $(INCD)$(PACKAGE_INC) -o $@ $<
+%.o: %.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCD) -I$(UMFPACK_INC_DIR) -I$(CHOLMOD_INC_DIR) -o $@ $<
 
 $(BIN): $(CPP_OBJS) $(CU_OBJS)
-	$(CXX) -o $(BIN) $(CU_OBJS) $(CPP_OBJS) $(LDFLAGS) $(INCD) $(PACKAGE_LIB) $(LIBS)
+	$(CXX) -o $(BIN) $(CU_OBJS) $(CPP_OBJS) $(LDFLAGS) $(INCD)$(UMFPACK_LIB) $(CHOLMOD_LIB) $(LIBS)
 
 clean:
 	rm -f $(BIN) *.o *.cu_o
